Change Docker build context

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,8 +48,8 @@ jobs:
         with:
           push: true
           builder: ${{ steps.buildx.outputs.name }}
-          context: .
-          file: ./distribution-spec/conformance/Dockerfile
+          context: ./distribution-spec/conformance
+          file: Dockerfile
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/spegel-org/conformance:${{ steps.prep.outputs.VERSION }}
           labels: ${{ steps.meta.outputs.labels }}
